--- a/frontend/src/theme/general.css
+++ b/frontend/src/theme/general.css
@@ -3,13 +3,9 @@ http://ionicframework.com/docs/theming/ */
 
 /** Ionic CSS Variables **/
 :root {
-
-    /** COLORS **/
-    --ion-background-color: #2F3540;
-
     --ion-color-primary: #F28705;
     --ion-color-primary-rgb: 242, 135, 5;
-    --ion-color-primary-contrast: #000000;
+    --ion-color-primary-contrast: #ffffff;
     --ion-color-primary-contrast-rgb: 0, 0, 0;
     --ion-color-primary-shade: #d57704;
     --ion-color-primary-tint: #f3931e;
@@ -23,22 +19,22 @@ http://ionicframework.com/docs/theming/ */
 
     --ion-color-tertiary: #A0A603;
     --ion-color-tertiary-rgb: 160, 166, 3;
-    --ion-color-tertiary-contrast: #000000;
-    --ion-color-tertiary-contrast-rgb: 0, 0, 0;
+    --ion-color-tertiary-contrast: #ffffff;
+    --ion-color-tertiary-contrast-rgb: 255, 255, 255;
     --ion-color-tertiary-shade: #8d9203;
     --ion-color-tertiary-tint: #aaaf1c;
 
     --ion-color-success: #F29F05;
     --ion-color-success-rgb: 242, 159, 5;
-    --ion-color-success-contrast: #000000;
-    --ion-color-success-contrast-rgb: 0, 0, 0;
+    --ion-color-success-contrast: #ffffff;
+    --ion-color-success-contrast-rgb: 255, 255, 255;
     --ion-color-success-shade: #d58c04;
     --ion-color-success-tint: #f3a91e;
 
     --ion-color-warning: #A6826D;
     --ion-color-warning-rgb: 166, 130, 109;
-    --ion-color-warning-contrast: #000000;
-    --ion-color-warning-contrast-rgb: 0, 0, 0;
+    --ion-color-warning-contrast: #ffffff;
+    --ion-color-warning-contrast-rgb: 255, 255, 255;
     --ion-color-warning-shade: #927260;
     --ion-color-warning-tint: #af8f7c;
 
@@ -74,31 +70,23 @@ http://ionicframework.com/docs/theming/ */
     --ion-color-light-shade: #d7d8da;
     --ion-color-light-tint: #f5f6f9;
 
+    /* Text */
+    --ion-text-color: #ffffff;
 
-    /** testNew **/
-    --ion-color-favorite: #d6811a;
-    --ion-color-favorite-rgb: 214, 129, 26;
-    --ion-color-favorite-contrast: #000000;
-    --ion-color-favorite-contrast-rgb: 0, 0, 0;
-    --ion-color-favorite-shade: #bc7217;
-    --ion-color-favorite-tint: #da8e31;
+    /** Background **/
+    --ion-background-color: #2F3540;
+
+    /* Card */
+    --ion-card-color: #ffffff;
+
+    /* Item */
+    --ion-item-color: #ffffff;
 }
 
-.ion-color-favorite {
-    --ion-color-base: var(--ion-color-favorite);
-    --ion-color-base-rgb: var(--ion-color-favorite-rgb);
-    --ion-color-contrast: var(--ion-color-favorite-contrast);
-    --ion-color-contrast-rgb: var(--ion-color-favorite-contrast-rgb);
-    --ion-color-shade: var(--ion-color-favorite-shade);
-    --ion-color-tint: var(--ion-color-favorite-tint);
-}
-
+/*
+* Dark Colors
+*/
 @media (prefers-color-scheme: dark) {
-    /*
-   * Dark Colors
-   * -------------------------------------------
-   */
-
     body {
         --ion-color-primary: #2F3540;
         --ion-color-primary-rgb: 47, 53, 64;
@@ -109,8 +97,8 @@ http://ionicframework.com/docs/theming/ */
 
         --ion-color-secondary: #F28705;
         --ion-color-secondary-rgb: 242, 135, 5;
-        --ion-color-secondary-contrast: #000000;
-        --ion-color-secondary-contrast-rgb: 0, 0, 0;
+        --ion-color-secondary-contrast: #ffffff;
+        --ion-color-secondary-contrast-rgb: 255, 255, 255;
         --ion-color-secondary-shade: #d57704;
         --ion-color-secondary-tint: #f3931e;
 
@@ -162,93 +150,5 @@ http://ionicframework.com/docs/theming/ */
         --ion-color-light-contrast-rgb: 0, 0, 0;
         --ion-color-light-shade: #d57704;
         --ion-color-light-tint: #f3931e;
-
-    }
-
-    /*
-   * iOS Dark Theme
-   * -------------------------------------------
-   */
-
-    .ios body {
-        --ion-background-color: #000000;
-        --ion-background-color-rgb: 0, 0, 0;
-
-        --ion-text-color: #ffffff;
-        --ion-text-color-rgb: 255, 255, 255;
-
-        --ion-color-step-50: #0d0d0d;
-        --ion-color-step-100: #1a1a1a;
-        --ion-color-step-150: #262626;
-        --ion-color-step-200: #333333;
-        --ion-color-step-250: #404040;
-        --ion-color-step-300: #4d4d4d;
-        --ion-color-step-350: #595959;
-        --ion-color-step-400: #666666;
-        --ion-color-step-450: #737373;
-        --ion-color-step-500: #808080;
-        --ion-color-step-550: #8c8c8c;
-        --ion-color-step-600: #999999;
-        --ion-color-step-650: #a6a6a6;
-        --ion-color-step-700: #b3b3b3;
-        --ion-color-step-750: #bfbfbf;
-        --ion-color-step-800: #cccccc;
-        --ion-color-step-850: #d9d9d9;
-        --ion-color-step-900: #e6e6e6;
-        --ion-color-step-950: #f2f2f2;
-
-        --ion-item-background: #000000;
-
-        --ion-card-background: #1c1c1d;
-    }
-
-    .ios ion-modal {
-        --ion-background-color: var(--ion-color-step-100);
-        --ion-toolbar-background: var(--ion-color-step-150);
-        --ion-toolbar-border-color: var(--ion-color-step-250);
-    }
-
-
-    /*
-   * Material Design Dark Theme
-   * -------------------------------------------
-   */
-
-    .md body {
-        --ion-background-color: #121212;
-        --ion-background-color-rgb: 18, 18, 18;
-
-        --ion-text-color: #ffffff;
-        --ion-text-color-rgb: 255, 255, 255;
-
-        --ion-border-color: #222222;
-
-        --ion-color-step-50: #1e1e1e;
-        --ion-color-step-100: #2a2a2a;
-        --ion-color-step-150: #363636;
-        --ion-color-step-200: #414141;
-        --ion-color-step-250: #4d4d4d;
-        --ion-color-step-300: #595959;
-        --ion-color-step-350: #656565;
-        --ion-color-step-400: #717171;
-        --ion-color-step-450: #7d7d7d;
-        --ion-color-step-500: #898989;
-        --ion-color-step-550: #949494;
-        --ion-color-step-600: #a0a0a0;
-        --ion-color-step-650: #acacac;
-        --ion-color-step-700: #b8b8b8;
-        --ion-color-step-750: #c4c4c4;
-        --ion-color-step-800: #d0d0d0;
-        --ion-color-step-850: #dbdbdb;
-        --ion-color-step-900: #e7e7e7;
-        --ion-color-step-950: #f3f3f3;
-
-        --ion-item-background: #1e1e1e;
-
-        --ion-toolbar-background: #1f1f1f;
-
-        --ion-tab-bar-background: #1f1f1f;
-
-        --ion-card-background: #1e1e1e;
     }
 }
