--- a/frontend/src/theme/general.css
+++ b/frontend/src/theme/general.css
@@ -88,14 +88,14 @@ http://ionicframework.com/docs/theming/ */
 */
 @media (prefers-color-scheme: dark) {
     body {
-        --ion-color-primary: #2F3540;
+        --ion-color-primary: #F28705;
         --ion-color-primary-rgb: 47, 53, 64;
         --ion-color-primary-contrast: #ffffff;
         --ion-color-primary-contrast-rgb: 255, 255, 255;
         --ion-color-primary-shade: #292f38;
         --ion-color-primary-tint: #444953;
 
-        --ion-color-secondary: #F28705;
+        --ion-color-secondary: #2F3540;
         --ion-color-secondary-rgb: 242, 135, 5;
         --ion-color-secondary-contrast: #ffffff;
         --ion-color-secondary-contrast-rgb: 255, 255, 255;
@@ -144,9 +144,9 @@ http://ionicframework.com/docs/theming/ */
         --ion-color-medium-shade: #86888f;
         --ion-color-medium-tint: #a2a4ab;
 
-        --ion-color-light: #F28705;
+        --ion-color-light: #ffffff;
         --ion-color-light-rgb: 242, 135, 5;
-        --ion-color-light-contrast: #000000;
+        --ion-color-light-contrast: #F28705;
         --ion-color-light-contrast-rgb: 0, 0, 0;
         --ion-color-light-shade: #d57704;
         --ion-color-light-tint: #f3931e;
