--- a/frontend/src/theme/ios.css
+++ b/frontend/src/theme/ios.css
@@ -44,5 +44,6 @@
         --ion-background-color: var(--ion-color-step-100);
         --ion-toolbar-background: var(--ion-color-step-150);
         --ion-toolbar-border-color: var(--ion-color-step-250);
+        --ion-item-background: var(--ion-color-step-150);
     }
 }
