[frontend] Update CSS

--- a/frontend/src/theme/custom.css
+++ b/frontend/src/theme/custom.css
@@ -14,6 +14,10 @@
     justify-content: center;
 }
 
+.block {
+    display: block;
+}
+
 .content {
     top: 0 !important;
     bottom: 0 !important;
