[frontend] Improve suggestion page and remove custom design to improve dev speed

--- a/frontend/src/theme/custom.css
+++ b/frontend/src/theme/custom.css
@@ -29,6 +29,11 @@
     margin-right: auto !important;
 }
 
+ion-card.no-shadow {
+    /* no shadow */
+    box-shadow: none !important;
+}
+
 ion-card.shadow {
     /* nice shadow with light background and round corners */
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2), 0 0 10px 0 rgba(0, 0, 0, 0.19);
