--- a/frontend/src/theme/custom.css
+++ b/frontend/src/theme/custom.css
@@ -1,23 +1,3 @@
-.center {
-    position: relative;
-    text-align: center;
-    object-fit: fill;
-    width: 100%;
-}
-
-.flex {
-    display: flex;
-}
-
-.flex-center {
-    display: flex;
-    justify-content: center;
-}
-
-.block {
-    display: block;
-}
-
 .content {
     top: 0 !important;
     bottom: 0 !important;
@@ -29,29 +9,25 @@
     margin-right: auto !important;
 }
 
-ion-card.no-shadow {
-    /* no shadow */
+:root {
+    --box-shadow: rgba(0, 0, 0, 0.15) 0 2px 8px;
+}
+
+.shadow {
+    box-shadow: var(--box-shadow);
+}
+
+ion-card {
+    margin-bottom: 20px;
     box-shadow: none !important;
+    border: 1px solid #dcdcdc !important;
 }
 
-ion-card.shadow {
-    /* nice shadow with light background and round corners */
-    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2), 0 0 10px 0 rgba(0, 0, 0, 0.19);
+ion-searchbar {
+    --border-radius: 50px !important;
+    --box-shadow: var(--box-shadow);
 }
 
-ion-card.hoverable {
-    /* hover effect */
-    transition: transform 0.2s ease-in-out, box-shadow 0.1s ease-in-out;
-}
-
-ion-card.hoverable:hover {
-    /* move card up on hover */
-    transform: translateY(-1px);
-    /* change cursor on hover */
+.link {
     cursor: pointer;
-}
-
-ion-card.hoverable.shadow:hover {
-    /* change shadow on hover */
-    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3), 0 0 10px 0 rgba(0, 0, 0, 0.29);
 }
