--- a/frontend/src/theme/custom.css
+++ b/frontend/src/theme/custom.css
@@ -17,6 +17,10 @@
     box-shadow: var(--box-shadow);
 }
 
+.animation-fade-in {
+    animation: fade-in 0.5s ease-in-out;
+}
+
 ion-card {
     margin-bottom: 20px;
     box-shadow: none !important;
