--- a/frontend/src/theme/global.css
+++ b/frontend/src/theme/global.css
@@ -1,16 +1,8 @@
-.content {
-    top: 0 !important;
-    bottom: 0 !important;
-    left: 0 !important;
-    right: 0 !important;
-    max-width: 1080px;
-    margin: unset !important;
-    margin-left: auto !important;
-    margin-right: auto !important;
-}
-
 :root {
     --box-shadow: rgba(0, 0, 0, 0.15) 0 2px 8px;
+    --margin: 0;
+    --margin-lr: 20px;
+    --border-radius: 15px;
 }
 
 .shadow {
@@ -23,8 +15,14 @@
 
 ion-card {
     margin-bottom: 20px;
+    margin-right: 0;
+    margin-left: 0;
     box-shadow: none !important;
     border: 1px solid #dcdcdc !important;
+}
+
+ion-grid {
+    padding: 0;
 }
 
 ion-searchbar {
