--- a/frontend/src/theme/layout.css
+++ b/frontend/src/theme/layout.css
@@ -1,3 +1,20 @@
+.page {
+    margin-top: 20px;
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+.content {
+    top: 0 !important;
+    bottom: 0 !important;
+    left: 0 !important;
+    right: 0 !important;
+    max-width: 1080px;
+    margin: unset !important;
+    margin-left: auto !important;
+    margin-right: auto !important;
+}
+
 .center {
     position: relative;
     text-align: center;
