--- a/frontend/src/theme/font.css
+++ b/frontend/src/theme/font.css
@@ -1,6 +1,5 @@
 h1, h2, h3, h4, h5, h6 {
     font-weight: bold;
-    margin-bottom: 0.5rem;
 }
 
 h1 {
@@ -8,9 +7,24 @@ h1 {
 }
 
 h2 {
-    font-size: 1.7rem;
+    font-size: 1.5rem;
 }
 
 h3 {
-    font-size: 1.4rem;
+    font-size: 1.0rem;
+}
+
+
+@media (max-width: 414px) {
+    h1 {
+        font-size: 2.1rem;
+    }
+
+    h2 {
+        font-size: 1.3rem;
+    }
+
+    h3 {
+        font-size: 0.8rem;
+    }
 }
