--- a/frontend/src/theme/font.css
+++ b/frontend/src/theme/font.css
@@ -7,24 +7,38 @@ h1 {
 }
 
 h2 {
-    font-size: 1.5rem;
+    font-size: 1.6rem;
+    font-weight: 600;
 }
 
 h3 {
-    font-size: 1.0rem;
+    font-size: 1.3rem;
+    font-weight: 600;
+}
+
+:root {
+    --font-size-large: 1.7rem;
+    --font-size-medium: 1.5rem;
+    --font-size-small: 1.0rem;
 }
 
 
-@media (max-width: 414px) {
+@media (width <= 414px) {
     h1 {
         font-size: 2.1rem;
     }
 
     h2 {
-        font-size: 1.3rem;
+        font-size: 1.5rem;
     }
 
     h3 {
-        font-size: 0.8rem;
+        font-size: 1.2rem;
+    }
+
+    :root {
+        --font-size-large: 1.5rem;
+        --font-size-medium: 1.0rem;
+        --font-size-small: 0.7rem;
     }
 }
