--- a/frontend/src/theme/layout.css
+++ b/frontend/src/theme/layout.css
@@ -3,16 +3,11 @@
 }
 
 .page {
-    margin-top: 20px;
-    margin-left: 15px;
-    margin-right: 15px;
+    margin: 25px 15px;
 }
 
 .content {
-    top: 0 !important;
-    bottom: 0 !important;
-    left: 0 !important;
-    right: 0 !important;
+    inset: 0 !important;
     max-width: var(--max-width) !important;
     margin: unset !important;
     margin-left: auto !important;
@@ -26,16 +21,6 @@
     width: 100%;
 }
 
-/* Flex */
 .flex {
     display: flex;
-}
-
-.flex-center {
-    display: flex;
-    justify-content: center;
-}
-
-.block {
-    display: block;
 }
