--- a/frontend/src/theme/font.css
+++ b/frontend/src/theme/font.css
@@ -4,6 +4,7 @@
     --font-size-medium: 1.5rem;
     --font-size-smaller: 1.4rem;
     --font-size-small: 1.1rem;
+    --font-weight-bolder: 700;
     --font-weight-bold: 600;
     --font-weight-normal: 400;
     --font-weight-light: 300;
