--- a/frontend/src/theme/colors.css
+++ b/frontend/src/theme/colors.css
@@ -6,56 +6,49 @@
 :root {
     --ion-color-primary: #62C370;
     --ion-color-primary-rgb: 98, 195, 112;
-    --ion-color-primary-contrast: #000000;
+    --ion-color-primary-contrast: #000;
     --ion-color-primary-contrast-rgb: 0, 0, 0;
     --ion-color-primary-shade: #56ac63;
     --ion-color-primary-tint: #72c97e;
-
     --ion-color-secondary: #F5A623;
     --ion-color-secondary-rgb: 245, 166, 35;
-    --ion-color-secondary-contrast: #000000;
+    --ion-color-secondary-contrast: #000;
     --ion-color-secondary-contrast-rgb: 0, 0, 0;
     --ion-color-secondary-shade: #d8921f;
     --ion-color-secondary-tint: #f6af39;
-
     --ion-color-tertiary: #8E8E93;
     --ion-color-tertiary-rgb: 142, 142, 147;
-    --ion-color-tertiary-contrast: #000000;
+    --ion-color-tertiary-contrast: #000;
     --ion-color-tertiary-contrast-rgb: 0, 0, 0;
     --ion-color-tertiary-shade: #7d7d81;
     --ion-color-tertiary-tint: #99999e;
-
     --ion-color-success: #4CD964;
     --ion-color-success-rgb: 76, 217, 100;
-    --ion-color-success-contrast: #000000;
+    --ion-color-success-contrast: #000;
     --ion-color-success-contrast-rgb: 0, 0, 0;
     --ion-color-success-shade: #43bf58;
     --ion-color-success-tint: #5edd74;
-
     --ion-color-warning: #ffc409;
     --ion-color-warning-rgb: 255, 196, 9;
-    --ion-color-warning-contrast: #000000;
+    --ion-color-warning-contrast: #000;
     --ion-color-warning-contrast-rgb: 0, 0, 0;
     --ion-color-warning-shade: #e0ac08;
     --ion-color-warning-tint: #ffca22;
-
     --ion-color-danger: #FF3B30;
     --ion-color-danger-rgb: 255, 59, 48;
-    --ion-color-danger-contrast: #ffffff;
+    --ion-color-danger-contrast: #fff;
     --ion-color-danger-contrast-rgb: 255, 255, 255;
     --ion-color-danger-shade: #e0342a;
     --ion-color-danger-tint: #ff4f45;
-
     --ion-color-medium: #92949c;
     --ion-color-medium-rgb: 146, 148, 156;
-    --ion-color-medium-contrast: #000000;
+    --ion-color-medium-contrast: #000;
     --ion-color-medium-contrast-rgb: 0, 0, 0;
     --ion-color-medium-shade: #808289;
     --ion-color-medium-tint: #9d9fa6;
-
     --ion-color-light: #f4f5f8;
     --ion-color-light-rgb: 244, 245, 248;
-    --ion-color-light-contrast: #000000;
+    --ion-color-light-contrast: #000;
     --ion-color-light-contrast-rgb: 0, 0, 0;
     --ion-color-light-shade: #d7d8da;
     --ion-color-light-tint: #f5f6f9;
@@ -68,34 +61,30 @@
  */
 
 .ios body.dark {
-    --ion-background-color: #000000;
+    --ion-background-color: #000;
     --ion-background-color-rgb: 0, 0, 0;
-
-    --ion-text-color: #ffffff;
+    --ion-text-color: #fff;
     --ion-text-color-rgb: 255, 255, 255;
-
     --ion-color-step-50: #0d0d0d;
     --ion-color-step-100: #1a1a1a;
     --ion-color-step-150: #262626;
-    --ion-color-step-200: #333333;
+    --ion-color-step-200: #333;
     --ion-color-step-250: #404040;
     --ion-color-step-300: #4d4d4d;
     --ion-color-step-350: #595959;
-    --ion-color-step-400: #666666;
+    --ion-color-step-400: #666;
     --ion-color-step-450: #737373;
     --ion-color-step-500: #808080;
     --ion-color-step-550: #8c8c8c;
-    --ion-color-step-600: #999999;
+    --ion-color-step-600: #999;
     --ion-color-step-650: #a6a6a6;
     --ion-color-step-700: #b3b3b3;
     --ion-color-step-750: #bfbfbf;
-    --ion-color-step-800: #cccccc;
+    --ion-color-step-800: #ccc;
     --ion-color-step-850: #d9d9d9;
     --ion-color-step-900: #e6e6e6;
     --ion-color-step-950: #f2f2f2;
-
-    --ion-item-background: #000000;
-
+    --ion-item-background: #000;
     --ion-card-background: #1c1c1d;
 }
 
@@ -114,12 +103,9 @@
 .md body.dark {
     --ion-background-color: #121212;
     --ion-background-color-rgb: 18, 18, 18;
-
-    --ion-text-color: #ffffff;
+    --ion-text-color: #fff;
     --ion-text-color-rgb: 255, 255, 255;
-
-    --ion-border-color: #222222;
-
+    --ion-border-color: #222;
     --ion-color-step-50: #1e1e1e;
     --ion-color-step-100: #2a2a2a;
     --ion-color-step-150: #363636;
@@ -139,12 +125,8 @@
     --ion-color-step-850: #dbdbdb;
     --ion-color-step-900: #e7e7e7;
     --ion-color-step-950: #f3f3f3;
-
     --ion-item-background: #1e1e1e;
-
     --ion-toolbar-background: #1f1f1f;
-
     --ion-tab-bar-background: #1f1f1f;
-
     --ion-card-background: #1e1e1e;
 }
