--- a/frontend/src/theme/layout.css
+++ b/frontend/src/theme/layout.css
@@ -1,9 +1,32 @@
 :root {
     --max-width: 1080px;
+
+    /* Margin */
+    --margin-auto: 0 auto;
     --margin-page: 25px 15px;
     --margin-small: 5px;
     --margin-medium: 10px;
+    --margin: var(--margin-medium);
     --margin-large: 25px;
+
+    /* Margin sections */
+    --margin-s-medium: 20px;
+    --margin-s-large: 45px;
+    --margin-s: var(--margin-s-large);
+
+    /* Padding */
+    --padding-small: 5px;
+    --padding-medium: 10px;
+    --padding-large: 25px;
+}
+
+@media (width <= 414px) {
+    :root {
+        /* Margin sections */
+        --margin-s-medium: 10px;
+        --margin-s-large: 30px;
+        --margin-s: var(--margin-s-large);
+    }
 }
 
 .page {
