[frontend] Adapt to new API, use script setup syntax and update UI

--- a/frontend/src/theme/global.css
+++ b/frontend/src/theme/global.css
@@ -43,3 +43,11 @@
     object-fit: cover;
     color: transparent;
 }
+
+.over-x-scroll {
+    overflow-x: scroll;
+}
+
+.over-y-scroll {
+    overflow-y: scroll;
+}
