--- a/frontend/src/theme/colors.css
+++ b/frontend/src/theme/colors.css
@@ -53,6 +53,22 @@
     --ion-color-light-shade: #d7d8da;
     --ion-color-light-tint: #f5f6f9;
 
+    /* Custom Colors */
+    --ion-color-favorite: #E5270E;
+    --ion-color-favorite-rgb: 229, 39, 14;
+    --ion-color-favorite-contrast: #fff;
+    --ion-color-favorite-contrast-rgb: 255, 255, 255;
+    --ion-color-favorite-shade: #c9230c;
+    --ion-color-favorite-tint: #e63e29;
+}
+
+.ion-color-favorite {
+    --ion-color-base: var(--ion-color-favorite);
+    --ion-color-base-rgb: var(--ion-color-favorite-rgb);
+    --ion-color-contrast: var(--ion-color-favorite-contrast);
+    --ion-color-contrast-rgb: var(--ion-color-favorite-contrast-rgb);
+    --ion-color-shade: var(--ion-color-favorite-shade);
+    --ion-color-tint: var(--ion-color-favorite-tint);
 }
 
 /*
