--- a/frontend/src/shared/theme/global.css
+++ b/frontend/src/shared/theme/global.css
@@ -2,8 +2,8 @@
     /* shadows */
     --shadow-color: var(--ion-color-medium-shade);
     --shadow-color-strong: var(--ion-color-dark-shade);
-    --box-shadow: 0 2px 2px 0 rgb(0 0 0 / 14%), 0 3px 1px -2px rgb(0 0 0 / 20%), 0 1px 5px 0 rgb(0 0 0 / 12%);
-    --box-shadow-inner: 0 2px 2px 0 rgb(0 0 0 / 14%) inset, 0 3px 1px -2px rgb(0 0 0 / 20%) inset, 0 2px 10px 0 rgb(0 0 0 / 12%) inset;
+    --box-shadow: 0 4px 10px rgb(0 0 0 / 10%);
+    --box-shadow-inner: 0 4px 10px rgb(0 0 0 / 10%) inset;
     --box-shadow-strong: var(--ion-color-medium) 0px 20px 30px -10px;
     --box-shadow-hover: var(--box-shadow-strong);
 
@@ -35,6 +35,14 @@
 
 .link {
     cursor: pointer;
+}
+
+.desc {
+    color: var(--ion-color-medium);
+    font-size: var(--font-size-smaller);
+    line-height: var(--desc-line-height);
+    white-space: pre-wrap;
+    overflow-y: auto;
 }
 
 .img {
