[frontend] Fix eslint rules, fix bad UI on mobile, integrate search preferences into searchbar, add transitions

--- a/frontend/src/shared/theme/layout.css
+++ b/frontend/src/shared/theme/layout.css
@@ -31,9 +31,13 @@
     }
 }
 
-.page {
+.content-wrapper {
     margin: var(--margin-page);
+}
+
+.content {
     inset: 0 !important;
+    margin: unset !important;
     max-width: var(--max-width) !important;
     margin-left: auto !important;
     margin-right: auto !important;
