--- a/frontend/src/shared/theme/global.css
+++ b/frontend/src/shared/theme/global.css
@@ -68,3 +68,14 @@ ion-img::part(image) {
     top: 15px;
     z-index: 100;
 }
+
+/* Header */
+.ion-header {
+    display: none;
+}
+
+@media (width >= 768px) {
+    .ion-header {
+        display: inherit;
+    }
+}
