[client] Fix and improve editor, make saving recipes as favs more robust and move some files around

--- a/client/src/shared/theme/layout.css
+++ b/client/src/shared/theme/layout.css
@@ -31,6 +31,10 @@
     }
 }
 
+ion-content {
+    --offset-bottom: 1px !important;
+}
+
 .content-wrapper {
     margin: var(--margin-page);
     height: 100%;
