[client] Improve editor and move Duration component to shared

--- a/client/src/shared/theme/layout.css
+++ b/client/src/shared/theme/layout.css
@@ -52,6 +52,10 @@ ion-content {
     height: 100%;
 }
 
+.w100 {
+    width: 100%;
+}
+
 .center {
     position: relative;
     text-align: center;
