--- a/client/src/shared/theme/ionic.css
+++ b/client/src/shared/theme/ionic.css
@@ -25,3 +25,9 @@ ion-item {
     --background: inherit;
     --padding-end: 1rem;
 }
+
+ion-textarea, textarea {
+    font-size: 16px;
+    line-height: 1.6;
+    color: var(--ion-color-dark);
+}
