--- a/client/src/shared/theme/colors.css
+++ b/client/src/shared/theme/colors.css
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2023 Josef Müller.
+ * Copyright (c) 2023-2024 Josef Müller.
  */
 
 /*
@@ -81,8 +81,7 @@
  */
 
 .ios body.dark {
-    --ion-background-color: #000;
-    --ion-background-color-rgb: 0, 0, 0;
+    --ion-background-color: var(--ion-color-light);
     --ion-text-color: #fff;
     --ion-text-color-rgb: 255, 255, 255;
     --ion-color-step-50: #0d0d0d;
