Make UI clean and improve search

--- a/client/src/shared/theme/global.css
+++ b/client/src/shared/theme/global.css
@@ -23,6 +23,7 @@
 
     /* border */
     --border-radius: 15px;
+    --border-radius-strong: 50px;
     --border-radius-small: 10px;
     --border-radius-round: 100%;
     --border: thin solid var(--ion-color-light) !important;
