--- a/client/src/shared/theme/colors.css
+++ b/client/src/shared/theme/colors.css
@@ -64,6 +64,10 @@
     --ion-color-favorite-contrast-rgb: 255, 255, 255;
     --ion-color-favorite-shade: #c9230c;
     --ion-color-favorite-tint: #e63e29;
+
+    /* Background Colors */
+    --ion-background-color: var(--ion-color-light);
+    --ion-background-color-rgb: var(--ion-color-light-rgb);
 }
 
 .ion-color-favorite {
@@ -82,6 +86,7 @@
 
 .ios body.dark {
     --ion-background-color: var(--ion-color-light);
+    --ion-background-color-rgb: var(--ion-color-light-rgb);
     --ion-text-color: #fff;
     --ion-text-color-rgb: 255, 255, 255;
     --ion-color-step-50: #0d0d0d;
