--- a/client/src/shared/theme/transitions.css
+++ b/client/src/shared/theme/transitions.css
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2023 Josef Müller.
+ * Copyright (c) 2023-2024 Josef Müller.
  */
 
 /* Animations */
@@ -39,13 +39,13 @@
 
 .fade-enter-from,
 .fade-leave-to {
-    transform: translateY(20px);
+    transform: translateY(5px);
     opacity: 0;
 }
 
 /********* Fade-Top *********/
 .fade-top-enter-active {
-    transition: all 0.5s ease-out;
+    transition: all 0.3s ease-out;
 }
 
 .fade-top-leave-active {
@@ -54,6 +54,6 @@
 
 .fade-top-enter-from,
 .fade-top-leave-to {
-    transform: translateY(-20px);
+    transform: translateY(-5px);
     opacity: 0;
 }
